@@ -3,6 +3,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite (Git)
 
 pts-core: Fatal error fix for old PHP5 versions with pts_openbenchmarking_upload crash
+pts-core: Set AllowResultUploadsToOpenBenchmarking = FALSE in enterprise-setup
 ob_auto_compare: Show "since [date]" as part of the inline box plot
 phodevi: New cpu.peak-freq sensor for reporting just the highest CPU core frequency at that moment
 
